# EP-353_Problem_Sets

./: README.md
FinalProject/: README.md
FinalProject/01.Proposal/: README.md
FinalProject/02.Status/: README.md  piGO.cpp
FinalProject/03.PresentationGuideline/: CMakeLists.txt  piGO.cpp
ProblemSet3/: Problem3.1.c  Problem3.2.c  Problem3.3.c  Problem3.4.c  Problem3.5.c  Problem3.6.c  README.md
ProblemSet4/: README.md
ProblemSet4/Problem4.1/: CMakeLists.txt  Problem4.1.cpp
ProblemSet4/Problem4.2/: CMakeLists.txt  Problem4.2.cpp
ProblemSet4/Problem4.3/: CMakeLists.txt  Problem4.3.cpp
ProblemSet4/Problem4.4/: CMakeLists.txt  Problem4.4.cpp
ProblemSet4/Problem4.5/: CMakeLists.txt  Problem4.5.cpp
ProblemSet4/Problem4.6/: CMakeLists.txt  Problem4.6.cpp  reduct.aiff
